more changes pt1

--- a/index.html
+++ b/index.html
@@ -16,19 +16,12 @@
         <!-- add options here! -->
       </select>
     </div>
-    <table>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
+    <table id="pixel-table">
+  
+        
     </table>
   </body>
   <!-- loads our JavaScript file -->
-  <script type="text/javascript" src="/script.js"></script>
+  <script type="text/javascript" src="/script.js">
+  </script>
 </html>
