even more changes pt2

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </table>
   </body>
   <!-- loads our JavaScript file -->
-  <script type="text/javascript" src="/script.js">
+  <script type="text/javascript" src="script.js">
   </script>
 </html>
