--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <button id='add-row'>Add a row</button>
       <select>
         <!-- add options here! -->
+        <option value="red">Red</option>
+         <option value="green">Green</option>
       </select>
     </div>
     <table id="pixel-table">
